Not finish with table resevation

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -18,24 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "occupied random 2\n",
-      "[[1, 2, 3], [4, 5, 6]]\n",
-      "free number 2\n",
-      "free number 0\n",
-      "free number 2\n",
-      "occupied tables:  {'single': [1, 2]}\n",
-      "free tables:  {'single': [3], 'double': [1, 2, 3], 'family': [3]}\n"
+      "['single', 'double']\n",
+      "random 2\n",
+      "number_of_occupied_tables [1, 2, 3]\n",
+      "[1, 2]\n",
+      "random 1\n",
+      "number_of_occupied_tables [4, 5, 6]\n",
+      "[4]\n",
+      "random 2\n",
+      "occupied tables:  {'single': [1, 2], 'double': [4]}\n",
+      "free tables:  {'single': [3], 'double': [5, 6], 'family': [7, 8, 9]}\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
+    "\n",
     "occupied_tables = {}\n",
     "free_tables = {}\n",
     "\n",
@@ -47,19 +52,22 @@
     "                      }\n",
     "        table_name_random = random.randint(0, len(list(type_of_tables.keys())))  # Return random number of len dict.keys()\n",
     "        occupied_tables_list = list(type_of_tables.keys())[:(table_name_random)]\n",
-    "        \n",
+    "        print(occupied_tables_list)\n",
     "        for table_keys in type_of_tables.keys():\n",
     "            table_number_random = random.randint(0, len(list(type_of_tables.values())))\n",
-    "            if table_keys in occupied_tables_list:\n",
-    "                \n",
-    "                number_of_occupied_tables = type_of_tables.get(table_keys)\n",
-    "                occupied_tables.update({table_keys: number_of_occupied_tables[:(table_number_random)]})\n",
-    "                print('occupied random', table_number_random)\n",
+    "            print('random', table_number_random) # DEL\n",
     "            \n",
-    "                print(list(type_of_tables.values())[:(table_number_random)])\n",
-    "            if table_number_random < 3:\n",
-    "                print('free number', table_number_random)\n",
-    "                free_tables.update({table_keys: number_of_occupied_tables[(table_number_random):]})\n",
+    "            if table_keys in occupied_tables_list:\n",
+    "                number_of_occupied_tables = type_of_tables.get(table_keys)\n",
+    "                print('number_of_occupied_tables', number_of_occupied_tables) # DEL\n",
+    "                occupied_tables.update({table_keys: number_of_occupied_tables[:(table_number_random)]})\n",
+    "                if table_number_random < 3:\n",
+    "                    free_tables[table_keys] = number_of_occupied_tables[(table_number_random) - len(type_of_tables.values()): ]\n",
+    "            \n",
+    "                print(number_of_occupied_tables[:(table_number_random)]) # DEL\n",
+    "            elif table_keys not in occupied_tables_list:\n",
+    "                free_tables.update({table_keys: type_of_tables.get(table_keys)})\n",
+    "            \n",
     "                \n",
     "                \n",
     "                \n",
