Continue to work with assign table

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,39 +2,62 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "mylist = [\"apple\", \"banana\", \"cherry\"]\n",
-    "\n",
-    "random.randint(0, len(mylist))\n",
-    "nmb = random.randint(0, len(mylist))\n",
-    "\n",
-    "print(mylist[:(nmb)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['single', 'double']\n",
+      "apple\n",
+      "banana\n",
+      "cherry\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "mylist = {\"apple\":[1], \"banana\": [4, 5, 6], \"cherry\": [8, 9,10]}\n",
+    "\n",
+    "# random.randint(0, len(mylist))\n",
+    "# nmb = random.randint(0, len(mylist))\n",
+    "# numbers = mylist.get('apple')\n",
+    "# print(random.choice(mylist.get('apple')))\n",
+    "\n",
+    "for n in mylist:\n",
+    "    print(n)\n",
+    "\n",
+    "\n",
+    "if len(mylist['apple']) != 0:\n",
+    "    print(mylist['apple'])\n",
+    "elif not mylist['apple']:\n",
+    "    print('None')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['single', 'double', 'family']\n",
       "random 2\n",
       "number_of_occupied_tables [1, 2, 3]\n",
       "[1, 2]\n",
-      "random 1\n",
+      "random 3\n",
       "number_of_occupied_tables [4, 5, 6]\n",
-      "[4]\n",
-      "random 2\n",
-      "occupied tables:  {'single': [1, 2], 'double': [4]}\n",
-      "free tables:  {'single': [3], 'double': [5, 6], 'family': [7, 8, 9]}\n"
+      "[4, 5, 6]\n",
+      "random 1\n",
+      "number_of_occupied_tables [7, 8, 9]\n",
+      "[7]\n",
+      "occupied tables:  {'single': [1, 2], 'double': [4, 5, 6], 'family': [7]}\n",
+      "free tables:  {'single': [3], 'family': [8, 9]}\n"
      ]
     }
    ],
@@ -92,6 +115,42 @@
     "    car['baba'] = 146\n",
     "cars()\n",
     "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remigijus mano pusbrolis jam 45 metų, -ai\n",
+      "Remigijus mano pusbrolis\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name: str, age: int) -> None:\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def set_name(self) -> 'Person':\n",
+    "        self.name += ' mano pusbrolis'\n",
+    "        return self\n",
+    "    \n",
+    "    def set_age(self):\n",
+    "        self.age = f'{self.name} jam {self.age} metų, -ai'\n",
+    "        return self\n",
+    "    \n",
+    "    \n",
+    "person = Person('Remigijus', 45)\n",
+    "person.set_name().set_age()\n",
+    "\n",
+    "print(person.age)\n",
+    "print(person.name)"
    ]
   }
  ],
