--- a/tests.ipynb
+++ b/tests.ipynb
@@ -18,23 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['single', 'double']\n",
-      "random 2\n",
-      "number_of_occupied_tables [1, 2, 3]\n",
-      "[1, 2]\n",
+      "['single', 'double', 'family']\n",
       "random 1\n",
-      "number_of_occupied_tables [4, 5, 6]\n",
-      "[4]\n",
+      "number_of_occupied_tables [1, 2, 3]\n",
+      "[1]\n",
       "random 2\n",
-      "occupied tables:  {'single': [1, 2], 'double': [4]}\n",
-      "free tables:  {'single': [3], 'double': [5, 6], 'family': [7, 8, 9]}\n"
+      "number_of_occupied_tables [4, 5, 6]\n",
+      "[4, 5]\n",
+      "random 1\n",
+      "number_of_occupied_tables [7, 8, 9]\n",
+      "[7]\n",
+      "occupied tables:  {'single': [1], 'double': [4, 5], 'family': [7]}\n",
+      "free tables:  {'single': [2, 3], 'double': [6], 'family': [8, 9]}\n"
      ]
     }
    ],
@@ -92,6 +94,35 @@
     "    car['baba'] = 146\n",
     "cars()\n",
     "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "dictionary update sequence element #0 has length 1; 2 is required",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m         dictionarry\u001b[39m.\u001b[39mupdate(n)\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m dictionarry\n\u001b[0;32m----> 7\u001b[0m test \u001b[39m=\u001b[39m dictionary(\u001b[39m\"\u001b[39;49m\u001b[39m1\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m2\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m3\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      8\u001b[0m \u001b[39mprint\u001b[39m(test)\n",
+      "Cell \u001b[0;32mIn[19], line 5\u001b[0m, in \u001b[0;36mdictionary\u001b[0;34m(*kwargs)\u001b[0m\n\u001b[1;32m      3\u001b[0m dictionarry \u001b[39m=\u001b[39m {}\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m kwargs:\n\u001b[0;32m----> 5\u001b[0m     dictionarry\u001b[39m.\u001b[39;49mupdate(n)\n\u001b[1;32m      6\u001b[0m \u001b[39mreturn\u001b[39;00m dictionarry\n",
+      "\u001b[0;31mValueError\u001b[0m: dictionary update sequence element #0 has length 1; 2 is required"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Dict\n",
+    "def dictionary(**kwargs):\n",
+    "    dictionarry = {}\n",
+    "    for n in kwargs:\n",
+    "        dictionarry.update(n)\n",
+    "    return dictionarry\n",
+    "dictionary(\"1\":[\"2\",\"3\"])\n",
+    "print()\n"
    ]
   }
  ],
