--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +151,36 @@
     "\n",
     "print(person.age)\n",
     "print(person.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Darius': ['family', 2], 'Giedrius': ['double', 5]}\n",
+      "dict_keys(['Darius', 'Giedrius'])\n",
+      "Darius\n",
+      "Giedrius\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Resevation:\n",
+    "    \n",
+    "    resevation_maked_persons = {}\n",
+    "    persson_reservation_info = {}\n",
+    "\n",
+    "Resevation.resevation_maked_persons={'Darius': ['family', 2], 'Giedrius': ['double', 5]}\n",
+    "print(Resevation.resevation_maked_persons)\n",
+    "print(Resevation.resevation_maked_persons.keys())\n",
+    "for n, a in Resevation.resevation_maked_persons.items():\n",
+    "    Resevation.persson_reservation_info[]\n",
+    "        "
    ]
   }
  ],
