--- a/tests.ipynb
+++ b/tests.ipynb
@@ -155,31 +155,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Darius': ['family', 2], 'Giedrius': ['double', 5]}\n",
-      "dict_keys(['Darius', 'Giedrius'])\n",
-      "Darius\n",
-      "Giedrius\n"
+      "[['Darius', ['family', 2]], ['Giedrius', ['double', 5]]]\n",
+      "[['Darius', ['family', 2]], ['Giedrius', ['double', 5]]]\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "class Resevation:\n",
     "    \n",
-    "    resevation_maked_persons = {}\n",
+    "    resevation_maked_persons = []\n",
     "    persson_reservation_info = {}\n",
+    "    \n",
+    "    def get_time(self):\n",
+    "        time_now = time.localtime()\n",
+    "        return time_now\n",
+    "    \n",
+    "    def make_ahead_reservation(self, name: str, surname: str, number_of_persons: int, reserved_time) -> None:\n",
+    "        self.name = name\n",
+    "        self.surname = surname\n",
+    "        self.numeber_of_persons = number_of_persons\n",
+    "        self.reserved_time = reserved_time\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n",
     "\n",
-    "Resevation.resevation_maked_persons={'Darius': ['family', 2], 'Giedrius': ['double', 5]}\n",
+    "Resevation.resevation_maked_persons=[['Darius',['family', 2]], ['Giedrius',['double', 5]]]\n",
     "print(Resevation.resevation_maked_persons)\n",
-    "print(Resevation.resevation_maked_persons.keys())\n",
-    "for n, a in Resevation.resevation_maked_persons.items():\n",
-    "    Resevation.persson_reservation_info[]\n",
+    "print(Resevation.resevation_maked_persons)\n",
+    "\n",
     "        "
    ]
   }
