Table method improved

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,41 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': {'occupied': [True, True], 'custtomers': ['Giedrius', 'Darius'], 'occupied_time': ['10:00', '12:00']}, '2': {'occupied': [], 'custtomers': [], 'occupied_time': []}, '3': {'occupied': [], 'custtomers': [], 'occupied_time': []}}\n",
-      "{'1': {'occupied': [False], 'custtomers': [], 'occupied_time': []}, '2': {'occupied': [], 'custtomers': [], 'occupied_time': []}, '3': {'occupied': [], 'custtomers': [], 'occupied_time': []}}\n",
-      "{'1': {'occupied': [False], 'custtomers': [], 'occupied_time': []}, '2': {'occupied': [], 'custtomers': [], 'occupied_time': []}, '3': {'occupied': [], 'custtomers': [], 'occupied_time': []}}\n"
+      "\n",
+      "0\n",
+      "Nėra\n",
+      "Nėra\n"
      ]
     }
    ],
    "source": [
     "tables_data = {\n",
     "            'single':{\n",
-    "                '1':{'occupied': [True, True], 'custtomers': ['Giedrius', 'Darius'], 'occupied_time': ['10:00', '12:00']},\n",
-    "                '2':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
-    "                '3':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
+    "                1:{'occupied': [True, True], 'custtomers': ['Giedrius Kuprys', 'Darius'], 'occupied_time': ['10:00', '12:00']},\n",
+    "                2:{'occupied': [], 'custtomers': ['Dovydas', 'Remigijus'], 'occupied_time': []},\n",
+    "                3:{'occupied': [], 'custtomers': ['Hubertas', 'Aronas'], 'occupied_time': []},\n",
     "                },\n",
     "            'double':{\n",
-    "                '1':{'occupied': [False], 'custtomers': [], 'occupied_time': []},\n",
-    "                '2':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
-    "                '3':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
+    "                1:{'occupied': [False], 'custtomers': [], 'occupied_time': []},\n",
+    "                2:{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
+    "                3:{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
     "            },\n",
     "            'family':{\n",
-    "                '1':{'occupied': [False], 'custtomers': [], 'occupied_time': []},\n",
-    "                '2':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
-    "                '3':{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
+    "                1:{'occupied': [False], 'custtomers': [], 'occupied_time': []},\n",
+    "                2:{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
+    "                3:{'occupied': [], 'custtomers': [], 'occupied_time': []},\n",
     "            }\n",
     "        }\n",
     "\n",
-    "for n in tables_data.keys():\n",
-    "    \n",
-    "        print(tables_data.get(n))\n",
+    "a = 'Giedrius Kuprys'\n",
+    "\n",
+    "for n in range(1, len(tables_data.get('single', {}).values()) + 1):  # vietoj 'single' prasukti ciklą su kitais staliukais\n",
+    "    if a in tables_data.get('single', {}).get(n, {}).get('custtomers', {}):\n",
+    "        print()\n",
+    "        index_of_name: list = tables_data.get('single', {}).get(n, {}).get('custtomers', {})\n",
+    "        print(index_of_name.index(a))\n",
+    "    else:\n",
+    "        print('Nėra')\n",
+    "        \n",
     "   \n",
     "    \n"
    ]
