Workon on tables()

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,15 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "0\n",
+      "Nėra\n",
+      "Nėra\n",
+      "Nėra\n",
+      "Nėra\n",
+      "Nėra\n",
+      "Nėra\n",
       "Nėra\n",
       "Nėra\n"
      ]
@@ -36,14 +41,13 @@
     "        }\n",
     "\n",
     "a = 'Giedrius Kuprys'\n",
-    "\n",
-    "for n in range(1, len(tables_data.get('single', {}).values()) + 1):  # vietoj 'single' prasukti ciklą su kitais staliukais\n",
-    "    if a in tables_data.get('single', {}).get(n, {}).get('custtomers', {}):\n",
-    "        print()\n",
-    "        index_of_name: list = tables_data.get('single', {}).get(n, {}).get('custtomers', {})\n",
-    "        print(index_of_name.index(a))\n",
-    "    else:\n",
-    "        print('Nėra')\n",
+    "for key in tables_data.keys():\n",
+    "    for n in range(1, len(tables_data.get(key, {}).values()) + 1):  # vietoj 'single' prasukti ciklą su kitais staliukais\n",
+    "        if a in tables_data.get(key, {}).get(n, {}).get('custtomers', {}):\n",
+    "            index_of_name: list = tables_data.get('single', {}).get(n, {}).get('custtomers', {})\n",
+    "            print(index_of_name.index(a))\n",
+    "        else:\n",
+    "            print('Nėra')\n",
     "        \n",
     "   \n",
     "    \n"
