Add .append to add_custommer() line-72

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,7 @@
      "output_type": "stream",
      "text": [
       "0\n",
+      "7\n",
       "Nėra\n",
       "Nėra\n",
       "Nėra\n",
@@ -17,14 +18,16 @@
       "Nėra\n",
       "Nėra\n",
       "Nėra\n",
-      "Nėra\n"
+      "Nėra\n",
+      "None\n",
+      "{'single': {1: {'occupied': [True, True], 'custtomers': ['Giedrius Kuprys', 'Darius', 'Hubertas', 'Vaikas'], 'occupied_time': [1, 2, 4, 4, 4, 4, 4]}, 2: {'occupied': [], 'custtomers': ['Dovydas', 'Remigijus'], 'occupied_time': []}, 3: {'occupied': [], 'custtomers': ['Hubertas', 'Aronas'], 'occupied_time': []}}, 'double': {1: {'occupied': [False], 'custtomers': [], 'occupied_time': []}, 2: {'occupied': [], 'custtomers': [], 'occupied_time': []}, 3: {'occupied': [], 'custtomers': [], 'occupied_time': []}}, 'family': {1: {'occupied': [False], 'custtomers': [], 'occupied_time': []}, 2: {'occupied': [], 'custtomers': [], 'occupied_time': []}, 3: {'occupied': [], 'custtomers': [], 'occupied_time': []}}}\n"
      ]
     }
    ],
    "source": [
     "tables_data = {\n",
     "            'single':{\n",
-    "                1:{'occupied': [True, True], 'custtomers': ['Giedrius Kuprys', 'Darius'], 'occupied_time': ['10:00', '12:00']},\n",
+    "                1:{'occupied': [True, True], 'custtomers': ['Giedrius Kuprys', 'Darius', 'Hubertas'], 'occupied_time': [1, 2,4,4,4,4,4]},\n",
     "                2:{'occupied': [], 'custtomers': ['Dovydas', 'Remigijus'], 'occupied_time': []},\n",
     "                3:{'occupied': [], 'custtomers': ['Hubertas', 'Aronas'], 'occupied_time': []},\n",
     "                },\n",
@@ -46,8 +49,12 @@
     "        if a in tables_data.get(key, {}).get(n, {}).get('custtomers', {}):\n",
     "            index_of_name: list = tables_data.get('single', {}).get(n, {}).get('custtomers', {})\n",
     "            print(index_of_name.index(a))\n",
+    "            print(len(tables_data.get('single', {}).get(n, {}).get('occupied_time', {})))\n",
     "        else:\n",
     "            print('Nėra')\n",
+    "            \n",
+    "print(tables_data['single'][1]['custtomers'].append('Vaikas'))\n",
+    "print(tables_data)\n",
     "        \n",
     "   \n",
     "    \n"
