changed customer name input only full name

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -40,6 +40,16 @@
     "   \n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {'single':{1:{'occupied': False,'occupied_time': {'customer': []}}}}\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
