--- a/tests.ipynb
+++ b/tests.ipynb
@@ -69,6 +69,73 @@
     "a = {'single':{1:{'occupied': False,'occupied_time': {'customer': []}}}}\n",
     "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'customers': []}, {'customers': []}]\n",
+      "[{'customers': []}, {'customers': []}, {'customers': []}]\n",
+      "[{'customers': []}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables_data = {\n",
+    "        \"single\": {\n",
+    "            1: {\"customers\": [1]},\n",
+    "            2: {\"customers\": []},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "        \"double\": {\n",
+    "            1: {\"customers\": []},\n",
+    "            2: {\"customers\": []},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "        \"family\": {\n",
+    "            1: {\"customers\": [[\"Giedrius Kuprys\", \"16:45\"], [\"Tadas Blinda\", \"20:00\"]]},\n",
+    "            2: {\"customers\": [[\"Bronius Karvelis\", \"17:35\"]]},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "    }\n",
+    "\n",
+    "# for i in range(len(tables_data[\"family\"])):\n",
+    "#     for x in tables_data[\"family\"].get(i+1).get('customers'):\n",
+    "#         print(x)\n",
+    "#         print(len(x))\n",
+    "\n",
+    "# for x in tables_data[\"family\"]:\n",
+    "#     if len(tables_data[\"family\"].get(x).get('customers')) >= 1:\n",
+    "#         continue\n",
+    "#     print(x)\n",
+    "\n",
+    "for i, x in tables_data.items():\n",
+    "    \n",
+    "    a = [z for z in x.values() if not z['customers']]\n",
+    "    \n",
+    "    print(a)\n",
+    "    \n",
+    "    # for a in x.values():\n",
+    "    #     #print(len(tables_data[i].get(x).get('customers')))\n",
+    "    #     if len(a.get('customers')) >= 1:\n",
+    "    #         continue\n",
+    "    #     else:\n",
+    "    #         print(f'Laisvas staliukas {i} kurio numeris {x.get(1)}')\n",
+    "        # print(x)\n",
+    "        # print(a.get('customers'))"
+   ]
   }
  ],
  "metadata": {
