Finish free_table()

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -53,23 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'customers': []}, {'customers': []}]\n",
-      "[{'customers': []}, {'customers': []}, {'customers': []}]\n",
-      "[{'customers': []}]\n"
+      "[['single', 2], ['single', 3], ['double', 1], ['double', 2], ['double', 3], ['family', 3]]\n"
      ]
     }
    ],
@@ -86,27 +77,22 @@
     "            3: {\"customers\": []},\n",
     "        },\n",
     "        \"family\": {\n",
-    "            1: {\"customers\": [[\"Giedrius Kuprys\", \"16:45\"], [\"Tadas Blinda\", \"20:00\"]]},\n",
-    "            2: {\"customers\": [[\"Bronius Karvelis\", \"17:35\"]]},\n",
+    "            1: {\"customers\": []},\n",
+    "            2: {\"customers\": []},\n",
     "            3: {\"customers\": []},\n",
     "        },\n",
     "    }\n",
     "\n",
-    "# for i in range(len(tables_data[\"family\"])):\n",
-    "#     for x in tables_data[\"family\"].get(i+1).get('customers'):\n",
-    "#         print(x)\n",
-    "#         print(len(x))\n",
-    "\n",
-    "# for x in tables_data[\"family\"]:\n",
-    "#     if len(tables_data[\"family\"].get(x).get('customers')) >= 1:\n",
-    "#         continue\n",
-    "#     print(x)\n",
+    "free_tables = []\n",
     "\n",
     "for i, x in tables_data.items():\n",
-    "    \n",
-    "    a = [z for z in x.values() if not z['customers']]\n",
-    "    \n",
-    "    print(a)\n",
+    "    for z in x:\n",
+    "        if len(*tables_data[i].get(z).values()) == 0:\n",
+    "            free_tables.append([i,z])\n",
+    "            \n",
+    "      \n",
+    "        \n",
+    "print(free_tables)\n",
     "    \n",
     "    # for a in x.values():\n",
     "    #     #print(len(tables_data[i].get(x).get('customers')))\n",
@@ -116,6 +102,61 @@
     "    #         print(f'Laisvas staliukas {i} kurio numeris {x.get(1)}')\n",
     "        # print(x)\n",
     "        # print(a.get('customers'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['family', 1], ['family', 2], ['family', 3]]\n",
+      "1 family\n",
+      "{'single': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}, 'double': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}, 'family': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tables_data = {\n",
+    "        \"single\": {\n",
+    "            1: {\"customers\": []},\n",
+    "            2: {\"customers\": []},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "        \"double\": {\n",
+    "            1: {\"customers\": []},\n",
+    "            2: {\"customers\": []},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "        \"family\": {\n",
+    "            1: {\"customers\": []},\n",
+    "            2: {\"customers\": []},\n",
+    "            3: {\"customers\": []},\n",
+    "        },\n",
+    "    }\n",
+    "free_tables_list = [['single', 1], ['single', 2], ['single', 3], ['double', 1], ['double', 2], ['double', 3], ['family', 1], ['family', 2], ['family', 3]]\n",
+    "\n",
+    "full_name_ahead='Giedrius Kuprys'\n",
+    "time_of_reservation_ahead='10:00'\n",
+    "number_of_persons_ahead=3\n",
+    "\n",
+    "def assign_table():\n",
+    "    \n",
+    "    if number_of_persons_ahead >= 3:\n",
+    "        a = [x for x in free_tables_list if x[0] == 'family']\n",
+    "        print(a)\n",
+    "        print(a[0][1], a[0][0])\n",
+    "        \n",
+    "        tables_data['family']\n",
+    "    else:\n",
+    "        return f'Sorry we don`t have a table for you'\n",
+    "        #tables_data['family'].update()\n",
+    "            \n",
+    "assign_table()\n",
+    "print(tables_data)"
    ]
   }
  ],
