--- a/tests.ipynb
+++ b/tests.ipynb
@@ -106,15 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['family', 1], ['family', 2], ['family', 3]]\n",
-      "1 family\n",
+      "Sorry, restoraunt is full\n",
       "{'single': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}, 'double': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}, 'family': {1: {'customers': []}, 2: {'customers': []}, 3: {'customers': []}}}\n"
      ]
     }
@@ -137,26 +136,106 @@
     "            3: {\"customers\": []},\n",
     "        },\n",
     "    }\n",
-    "free_tables_list = [['single', 1], ['single', 2], ['single', 3], ['double', 1], ['double', 2], ['double', 3], ['family', 1], ['family', 2], ['family', 3]]\n",
+    "free_tables_list = []\n",
     "\n",
     "full_name_ahead='Giedrius Kuprys'\n",
     "time_of_reservation_ahead='10:00'\n",
     "number_of_persons_ahead=3\n",
     "\n",
     "def assign_table():\n",
-    "    \n",
-    "    if number_of_persons_ahead >= 3:\n",
-    "        a = [x for x in free_tables_list if x[0] == 'family']\n",
-    "        print(a)\n",
-    "        print(a[0][1], a[0][0])\n",
+    "\n",
+    "    if not free_tables_list:\n",
+    "        print(f'Sorry, restoraunt is full')\n",
     "        \n",
-    "        tables_data['family']\n",
-    "    else:\n",
-    "        return f'Sorry we don`t have a table for you'\n",
-    "        #tables_data['family'].update()\n",
+    "    if number_of_persons_ahead >= 3:\n",
+    "        for table in free_tables_list:\n",
+    "            if (table[0] == 'family'):\n",
+    "                return tables_data[table[0]][table[1]].update({'customers':[full_name_ahead, time_of_reservation_ahead, number_of_persons_ahead]})\n",
+    "            else: \n",
+    "                print(f\"Sorry we don`t have a table for you\")\n",
+    "                 \n",
+    "    if number_of_persons_ahead >= 2:\n",
+    "        for table in free_tables_list:\n",
+    "            if (table[0] == 'double' or table[0] == 'family'):\n",
+    "                return tables_data[table[0]][table[1]].update({'customers':[full_name_ahead, time_of_reservation_ahead, number_of_persons_ahead]})\n",
+    "            else: \n",
+    "                print(f\"Sorry we don`t have a table for you\")\n",
+    "    if number_of_persons_ahead >= 1:\n",
+    "        for table in free_tables_list:\n",
+    "            if (table[0] == 'single' or table[0] == 'double' or table[0] == 'family'):\n",
+    "                return tables_data[table[0]][table[1]].update({'customers':[full_name_ahead, time_of_reservation_ahead, number_of_persons_ahead]})\n",
+    "            else: \n",
+    "                print(f\"Sorry we don`t have a table for you\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "            \n",
     "assign_table()\n",
     "print(tables_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Position(name='Vancouver', lon=-123.1, lat=49.3)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Position:\n",
+    "    name: str\n",
+    "    lon: float\n",
+    "    lat: float\n",
+    "    \n",
+    "pos = Position('Oslo', 10.8, 59.4)\n",
+    "pos.name\n",
+    "Position('Vancouver', -123.1, 49.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deck(cards=[PlayingCard(rank='Q', suit='Hearts'), PlayingCard(rank='A', suit='Spades')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from typing import List\n",
+    "\n",
+    "@dataclass\n",
+    "class PlayingCard:\n",
+    "    rank: str\n",
+    "    suit: str\n",
+    "\n",
+    "@dataclass\n",
+    "class Deck:\n",
+    "    cards: List[PlayingCard]\n",
+    "    \n",
+    "queen_of_hearts = PlayingCard(rank='Q', suit='Hearts')\n",
+    "ace_of_spades = PlayingCard(rank='A', suit='Spades')\n",
+    "\n",
+    "two_cards = Deck([queen_of_hearts, ace_of_spades])\n",
+    "\n",
+    "print(two_cards)\n"
    ]
   }
  ],
