--- a/tests.ipynb
+++ b/tests.ipynb
@@ -237,6 +237,60 @@
     "\n",
     "print(two_cards)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generator empty\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from main import CafeteriaTables, Customer\n",
+    "table = [\n",
+    "    CafeteriaTables(table_name='Single', table_number=1, table_customer=[]),\n",
+    "    CafeteriaTables(table_name='Single', table_number=2, table_customer=[]), \n",
+    "    CafeteriaTables(table_name='Single', table_number=3, table_customer=[]), \n",
+    "    CafeteriaTables(table_name='Double', table_number=4, table_customer=[]), \n",
+    "    CafeteriaTables(table_name='Double', table_number=5, table_customer=[]),\n",
+    "    CafeteriaTables(table_name='Double', table_number=6, table_customer=[]), \n",
+    "    #CafeteriaTables(table_name='Family', table_number=7, table_customer=[Customer(full_name='Tadas Blinda', reservation_time='13', qnt_of_persons=3)]), \n",
+    "    CafeteriaTables(table_name='Family', table_number=8, table_customer=[]),\n",
+    "    CafeteriaTables(table_name='Family', table_number=9, table_customer=[])]\n",
+    "\n",
+    "z = 'Tadas Blinda'\n",
+    "n = (n for n in table if n.table_customer)\n",
+    "name = input('Name: ')\n",
+    "clock = input('Clock: ')\n",
+    "qnt = int(input('qnt'))\n",
+    "customer = Customer(full_name=name, reservation_time=clock, qnt_of_persons=qnt)\n",
+    "\n",
+    "def check_customer(customer):\n",
+    "    '''_exhausted  = object()\n",
+    "\n",
+    "        if next (some_generator, _exhausted) is _exhausted:\n",
+    "            print ('empty generator')'''\n",
+    "    _exhausted = object()\n",
+    "    a = (z for z in table if z.table_customer)\n",
+    "    if next(a, _exhausted) is _exhausted:\n",
+    "            print(\"generator empty\")        \n",
+    "    for i in a:\n",
+    "        for n in i.table_customer:\n",
+    "            if n.full_name == customer.full_name:\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "            \n",
+    "\n",
+    "print(check_customer(customer))"
+   ]
   }
  ],
  "metadata": {
