check_customer() done, get_table_for_customer() need to improve

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -240,19 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "generator empty\n",
-      "None\n"
+      "False\n"
      ]
     }
    ],
    "source": [
+    "from typing import Optional\n",
     "from main import CafeteriaTables, Customer\n",
     "table = [\n",
     "    CafeteriaTables(table_name='Single', table_number=1, table_customer=[]),\n",
@@ -265,29 +265,33 @@
     "    CafeteriaTables(table_name='Family', table_number=8, table_customer=[]),\n",
     "    CafeteriaTables(table_name='Family', table_number=9, table_customer=[])]\n",
     "\n",
-    "z = 'Tadas Blinda'\n",
-    "n = (n for n in table if n.table_customer)\n",
-    "name = input('Name: ')\n",
-    "clock = input('Clock: ')\n",
-    "qnt = int(input('qnt'))\n",
-    "customer = Customer(full_name=name, reservation_time=clock, qnt_of_persons=qnt)\n",
+    "z = 'Tadas Blindas'\n",
     "\n",
-    "def check_customer(customer):\n",
+    "# name = input('Name: ')\n",
+    "# clock = input('Clock: ')\n",
+    "# qnt = int(input('qnt'))\n",
+    "customer = Customer(full_name=z, reservation_time='14', qnt_of_persons=5)\n",
+    "\n",
+    "def check_customer(customer) -> bool | Optional[bool]:\n",
     "    '''_exhausted  = object()\n",
     "\n",
     "        if next (some_generator, _exhausted) is _exhausted:\n",
     "            print ('empty generator')'''\n",
-    "    _exhausted = object()\n",
-    "    a = (z for z in table if z.table_customer)\n",
-    "    if next(a, _exhausted) is _exhausted:\n",
-    "            print(\"generator empty\")        \n",
-    "    for i in a:\n",
-    "        for n in i.table_customer:\n",
-    "            if n.full_name == customer.full_name:\n",
-    "                return True\n",
-    "            else:\n",
-    "                return False\n",
-    "            \n",
+    "    a = [i for i in table if i.table_customer]\n",
+    "    # _empty = object()\n",
+    "    # if next(a, _empty) is _empty:\n",
+    "    if not a:\n",
+    "        return False\n",
+    "    else:\n",
+    "        print(list(a))\n",
+    "        for i in a:\n",
+    "            for n in i.table_customer:\n",
+    "                if n.full_name == customer.full_name:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    return False\n",
+    "        \n",
+    "                \n",
     "\n",
     "print(check_customer(customer))"
    ]
