Dont remember what changed

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -295,6 +295,67 @@
     "\n",
     "print(check_customer(customer))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Optional\n",
+    "from main import CafeteriaTables, Customer\n",
+    "table = [\n",
+    "    # CafeteriaTables(table_name='Single', table_number=1, table_customer=[]),\n",
+    "    # CafeteriaTables(table_name='Single', table_number=2, table_customer=[]), \n",
+    "    # CafeteriaTables(table_name='Single', table_number=3, table_customer=[]), \n",
+    "    # CafeteriaTables(table_name='Double', table_number=4, table_customer=[]), \n",
+    "    # CafeteriaTables(table_name='Double', table_number=5, table_customer=[]),\n",
+    "    # CafeteriaTables(table_name='Double', table_number=6, table_customer=[]), \n",
+    "    CafeteriaTables(table_name='Family', table_number=7, table_customer=[Customer(full_name='Tadas Blinda', reservation_time='13', qnt_of_persons=3)]), \n",
+    "    # CafeteriaTables(table_name='Family', table_number=8, table_customer=[]),\n",
+    "    # CafeteriaTables(table_name='Family', table_number=9, table_customer=[])\n",
+    "    ]\n",
+    "\n",
+    "z = 'Tadas Blindass'\n",
+    "\n",
+    "# name = input('Name: ')\n",
+    "# clock = input('Clock: ')\n",
+    "# qnt = int(input('qnt'))\n",
+    "customer = Customer(full_name=z, reservation_time='14', qnt_of_persons=5)\n",
+    "\n",
+    "def check_customer(customer) -> bool | Optional[bool]:\n",
+    "    \n",
+    "    a = (i for i in table if i.table_customer)\n",
+    "    \n",
+    "    zoo = any(\"Tadass\" for i in a for n in i.table_customer)\n",
+    "    return zoo\n",
+    "        \n",
+    "    \n",
+    "    # #print('zoo:', zoo)\n",
+    "    # if not a:\n",
+    "    #     return False\n",
+    "    # else:\n",
+    "    #     #print(list(a))\n",
+    "    #     for i in a:\n",
+    "    #         for n in i.table_customer:\n",
+    "    #             if n.full_name == customer.full_name:\n",
+    "    #                 return True\n",
+    "    #             else:\n",
+    "    #                 return False\n",
+    "   \n",
+    "        \n",
+    "            \n",
+    "\n",
+    "print(check_customer(customer))"
+   ]
   }
  ],
  "metadata": {
