not minor cahnges

--- a/for_delete/for_quick_testing.ipynb
+++ b/for_delete/for_quick_testing.ipynb
@@ -2,32 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n",
-      "Date format must to be like '2023-01-23' and bigger than current date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "def input_only_date(string_date: str, string_time:str) -> datetime:\n",
@@ -55,27 +32,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unbound method datetime.timestamp() needs an argument",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatetime\u001b[39;00m \u001b[39mimport\u001b[39;00m datetime\n\u001b[0;32m----> 2\u001b[0m date_now \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39;49mtimestamp()\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(date_now)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unbound method datetime.timestamp() needs an argument"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "import time\n",
     "date_now = datetime.timestamp()\n",
     "\n",
     "print(date_now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-06-22 12:45:14.328253\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "a = 1687427114.328253\n",
+    "print(datetime.fromtimestamp(a))\n"
    ]
   }
  ],
